--- a/sonoff_xmas_back.yaml
+++ b/sonoff_xmas_back.yaml
@@ -11,6 +11,8 @@ wifi:
     static_ip: 192.168.20.104
     gateway: 192.168.20.1
     subnet: 255.255.255.0
+  # needed for hidden SSID
+  fast_connect: true
   ap:
     ssid: "Xmas Back Hotspot"
     password: !secret wifi_hotspot_psw
