--- a/esp32_bed.yaml
+++ b/esp32_bed.yaml
@@ -15,7 +15,7 @@ esphome:
     
 wifi:
   # Use AP upperfloor
-  ssid: !secret wifi_not_ground_ssid
+  ssid: !secret wifi_not_upper_ssid
   password: !secret wifi_not_psw
   manual_ip:
     static_ip: 192.168.20.111
