--- a/sonoff_xmas_front.yaml
+++ b/sonoff_xmas_front.yaml
@@ -5,7 +5,7 @@ esphome:
   board_flash_mode: dout
     
 wifi:
-  ssid: !secret wifi_not_ground_ssid
+  ssid: !secret wifi_not_ssid
   password: !secret wifi_not_psw
   manual_ip:
     static_ip: 192.168.20.103
