--- a/esp32_cam_garage_a.yaml
+++ b/esp32_cam_garage_a.yaml
@@ -10,7 +10,7 @@ esphome:
   board: esp32dev
 
 wifi:
-  ssid: !secret wifi_not_ground_ssid
+  ssid: !secret wifi_not_ssid
   password: !secret wifi_not_psw
   manual_ip:
     static_ip: 192.168.20.108
