--- a/esp32_cam_garage_a.yaml
+++ b/esp32_cam_garage_a.yaml
@@ -1,36 +1,71 @@
-# Garage A esp32-cam 
+# Garaga A Cam board
+# filename: esp32_cam_garage_a.yaml
 # Module Ai Thinker ESP32 Cam
-
+# Functionality:
+#   Camera
+#   BLE Tracker
+# 
+### Declarations ####
 substitutions:
-  hostname: garage_a_cam
-  
-esphome:
-  name: $hostname
+# Identity
+  devicename: garage_a_cam
+  upper_devicename: Garage A Cam
+
+# Device
   platform: ESP32
   board: esp32dev
+
+# Network
+  static_ip: 192.168.20.108
+  gateway: 192.168.20.1
+  subnet: 255.255.255.0
+
+# General
+  logger_level: DEBUG
+
+### General configuration ####
+esphome:
+  name: ${devicename}
+  platform: $platform
+  board: $board
 
 wifi:
   ssid: !secret wifi_not_ssid
   password: !secret wifi_not_psw
   manual_ip:
-    static_ip: 192.168.20.108
-    gateway: 192.168.20.1
-    subnet: 255.255.255.0
-  
+    static_ip: $static_ip
+    gateway: $gateway
+    subnet: $subnet
   # needed for hidden SSID
   fast_connect: true
-
+  
   ap:
-    ssid: $hostname Hotspot
+    # Enable fallback hotspot (captive portal) in case wifi connection fails
+    ssid: ${upper_devicename} AP
     password: !secret wifi_hotspot_psw
 
 captive_portal:
 
+# Enable Home Assistant API
 api:
 
+# Enable logging
 logger:
+  level: $logger_level
 
 ota:
+  password: !secret ota_psw
+
+binary_sensor:
+  - <<: !include common/connectStatusSensor.yaml
+
+text_sensor:
+  - <<: !include common/versionTextSensor.yaml
+  - <<: !include common/wifiInfoTextSensor.yaml
+
+switch:
+  - <<: !include common/restartSwitch.yaml
+  # - <<: !include common/shutdownSwitch.yaml
 
 esp32_camera:
 # Configuration Ai Thinker
@@ -47,25 +82,10 @@ esp32_camera:
   power_down_pin: GPIO32
   name: Garage a
   resolution: 1280x1024
-  
-sensor:
-  - platform: wifi_signal
-    name: $hostname WiFi Signal
-    update_interval: 60s
-  - platform: uptime
-    name: $hostname Uptime
 
-binary_sensor: 
-  # Availability status
-  - platform: status
-    name: $hostname Status
-    
-text_sensor:
-  - platform: version
-    name: $hostname ESPHome Version
-  - platform: wifi_info
-    ssid:
-      name: $hostname WiFi
+sensor:
+  - <<: !include common/uptimeSensor.yaml
+  - <<: !include common/wifiSignalSensor.yaml
 
 output:
 #flashlight
@@ -82,8 +102,111 @@ light:
 #flashlight
   - platform: binary
     output: gpio_4
-    name: $hostname flash
+    name: ${upper_devicename}  flash
 #statuslight
   - platform: binary   
     output: gpio_33
-    name: $hostname status
+    name: ${upper_devicename} status
+
+
+# esp32_ble_tracker:
+  
+# bluetooth_proxy:
+#   active: true
+
+esp32_camera_web_server:
+  - port: 8080
+    mode: stream
+  - port: 8081
+    mode: snapshot
+
+# # --------------------------------------------------------------------
+# # Garage A esp32-cam 
+# # Module Ai Thinker ESP32 Cam
+
+# substitutions:
+#   hostname: garage_a_cam
+  
+# esphome:
+#   name: $hostname
+#   platform: ESP32
+#   board: esp32dev
+
+# wifi:
+#   ssid: !secret wifi_not_ssid
+#   password: !secret wifi_not_psw
+#   manual_ip:
+#     static_ip: 192.168.20.108
+#     gateway: 192.168.20.1
+#     subnet: 255.255.255.0
+  
+#   # needed for hidden SSID
+#   fast_connect: true
+
+#   ap:
+#     ssid: $hostname Hotspot
+#     password: !secret wifi_hotspot_psw
+
+# captive_portal:
+
+# api:
+
+# logger:
+
+# ota:
+
+# esp32_camera:
+# # Configuration Ai Thinker
+#   external_clock:
+#     pin: GPIO0
+#     frequency: 20MHz
+#   i2c_pins:
+#     sda: GPIO26
+#     scl: GPIO27
+#   data_pins: [GPIO5, GPIO18, GPIO19, GPIO21, GPIO36, GPIO39, GPIO34, GPIO35]
+#   vsync_pin: GPIO25
+#   href_pin: GPIO23
+#   pixel_clock_pin: GPIO22
+#   power_down_pin: GPIO32
+#   name: Garage a
+#   resolution: 1280x1024
+  
+# sensor:
+#   - platform: wifi_signal
+#     name: $hostname WiFi Signal
+#     update_interval: 60s
+#   - platform: uptime
+#     name: $hostname Uptime
+
+# binary_sensor: 
+#   # Availability status
+#   - platform: status
+#     name: $hostname Status
+    
+# text_sensor:
+#   - platform: version
+#     name: $hostname ESPHome Version
+#   - platform: wifi_info
+#     ssid:
+#       name: $hostname WiFi
+
+# output:
+# #flashlight
+#   - platform: gpio
+#     pin: GPIO4
+#     id: gpio_4
+# #statuslight
+#   - platform: gpio
+#     pin:
+#       number: GPIO33
+#       inverted: True
+#     id: gpio_33
+# light:
+# #flashlight
+#   - platform: binary
+#     output: gpio_4
+#     name: $hostname flash
+# #statuslight
+#   - platform: binary   
+#     output: gpio_33
+#     name: $hostname status
